9 December 2008: Wouter
	- bug #221 fixed: unbound checkconf checks if key files exist if
	  remote control is enabled. Also fixed NULL printf when not chrooted.
	- iana portlist updated.

3 December 2008: Wouter
	- Fix problem reported by Jaco Engelbrecht where unbound-control stats
	  freezes up unbound if this was compiled without threading, and
	  was using multiple processes.
	- iana portlist updated.
	- test for remote control with interprocess communication.
	- created command distribution mechanism so that remote control
	  commands other than 'stats' work on all processes in a nonthreaded
	  compiled version. dump/load cache work, on the first process.
	- fixup remote control local_data addition memory corruption bug.

1 December 2008: Wouter
	- SElinux policy files in contrib/selinux for the unbound daemon,
	  by Paul Wouters and Adam Tkac.

25 November 2008: Wouter
	- configure complains when --without-ssl is given (bug #220).
	- skip unsupported feature tests on vista/mingw.
	- fixup testcode/streamtcp to work on vista/mingw.
	- root-hints test checks version of dig required.
	- blacklisted servers are polled at a low rate (1%) to see if they
	  come back up. But not if there is some other working server.

24 November 2008: Wouter
	- document that the user of the server daemon needs read privileges
	  on the keys and certificates generated by unbound-control-setup.
	  This is different per system or distribution, usually, running the
	  script under the same username as the server uses suffices.
	  i.e.  sudo -u unbound unbound-control-setup
	- testset port to vista/mingw.
	- tcp_sigpipe to freebsd port.

21 November 2008: Wouter
	- fixed tcp accept, errors were printed when they should not.
	- unbound-control-setup.sh removes read/write permissions other
	  from the keys it creates (as suggested by Dmitriy Demidov).

20 November 2008: Wouter
	- fixup fatal error due to faulty error checking after tcp accept.